src/admin.scss
@use "~@cezembre/ui/dist/colors";
@use "~@cezembre/ui/dist/borders";

.cezembre-admin {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: stretch;
  justify-content: flex-start;

  > .namespaces-menu {
    height: 100%;
    width: 200px;
    background: colors.$background;
    @include borders.border();
  }

  > .container {
    flex: 1;
    padding: 40px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;

    > .header {
    }

    > .body {
      margin-top: 30px;
      overflow: auto;
    }
  }
}

